All_Component_DX/force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>In ServiceMax, Quote contains the estimated cost of a service event to be presented to a customer to get approval. A quote can be either created manually or generated automatically from the estimate lines of a service order.</description>
    <label>Service Quote</label>
    <nameField>
        <displayFormat>Q-{00000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>