All_Component_DX/force-app/main/default/objects/Quote__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer account for whom the quote is prepared. Is a lookup to an existing salesforce account record</description>
    <inlineHelpText>Customer account for whom the quote is prepared. Is a lookup to an existing salesforce account record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Quotes</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>