All_Component_DX/force-app/main/default/objects/Quote__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer contact for whom the quote is prepared. Is a lookup to an existing salesforce contact record</description>
    <inlineHelpText>Customer contact for whom the quote is prepared. Is a lookup to an existing salesforce contact record</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>