All_Component_DX/force-app/main/default/objects/Quote__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <description>Indicates if the discount is entered as an amount or percentage of total price</description>
    <inlineHelpText>Select Discount Type</inlineHelpText>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>