All_Component_DX/force-app/main/default/objects/Quote__c/fields/EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>EndpointURL__c</fullName>
    <description>Not used</description>
    <formula>$Api.Enterprise_Server_URL_70</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndpointURL</label>
    <type>Text</type>
</CustomField>