All_Component_DX/force-app/main/default/objects/Quote__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service order number for which this quote is created. Is a lookup to an existing service order record in ServiceMax</description>
    <inlineHelpText>Service order number for which this quote is created. Is a lookup to an existing service order record in ServiceMax</inlineHelpText>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>Service Quotes</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>