All_Component_DX/force-app/main/default/objects/Quote__c/fields/Total_Line_Price2__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Price2__c</fullName>
    <description>Sum of Line Price for all the lines</description>
    <inlineHelpText>Sum of Line Price for all the lines</inlineHelpText>
    <label>Total Line Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>