All_Component_DX/force-app/main/default/objects/Quote__c/listViews/All_Service_Quotes.listView-meta.xml
<ListView>
    <fullName>All_Service_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>Service_Order__c</columns>
    <columns>Quote_Amount2__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Quotes</label>
    <language>en_US</language>
</ListView>